[package]
name = "StensLab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
num-complex = "0.4"
rand = "0.8.5"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }